# mcp-audit

./: .gitignore  CHANGELOG.md  README.md  README.zh-CN.md  pyproject.toml
.github/ISSUE_TEMPLATE/: false_negative.yml  false_positive.yml
.github/workflows/: ci.yml
docs/: architecture.md  distribution-and-team-policy.md  expert-review-security.md  homebrew.md  implementation-plan.md  maturity-phase-2-opt-plan.md  next-phase-opt-plan.md  prd.md  product-surface-expansion-opt-plan.md  public-sample-feedback-loop.md  publishing.md  qa-plan.md  real-world-sample-matrix.md  release-checklist.md  rule-tuning-findings.md  rule-tuning.md  rules.md  sanitized-fixture-workflow.md  stable-product-opt-plan.md  team-adoption-playbook.md  team-governance-gate.md  team-policy-schema.md  v0.2-rule-gap-opt-plan.md
docs/releases/: v0.2.0.md  v0.3.0.md  (+3 more)
examples/: github-actions-team-policy.yml  high-risk-mcp.json  policy-exceptions.toml  team-policy.enforced.toml  team-policy.toml
ops/: README.md  opt-overlay.md
scripts/: sanitize_github_config.py
tests/: test_baseline.py  test_cli.py  test_client_fixtures.py  test_config_discovery.py  test_feedback_docs.py  test_json_parser.py  test_parsers_multi_format.py  test_policy_cli.py  test_project_config.py  test_readme_localization.py  test_real_world_corpus.py  test_real_world_corpus_v2.py  test_redaction.py  test_release_docs.py  test_reports.py  test_rule_coverage.py  test_rule_docker.py  test_rule_docs.py  test_rule_profiles.py  test_rule_tool_enablement.py  test_rules.py  test_sanitized_fixture.py  test_team_policy.py
(+66 files in other folders)
