[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-audit"
version = "0.1.0"
description = "Scan MCP and AI agent configs for risky permissions, secrets, unsafe commands, and CI safety gaps."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
mcp-audit = "mcp_audit.cli:entrypoint"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
