[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "xone-mcp-audit"
version = "0.3.1"
description = "Scan MCP and AI agent configs for risky permissions, secrets, unsafe commands, and CI safety gaps."
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0.2"]

[project.optional-dependencies]
dev = ["build>=1.2", "pytest>=8"]

[project.scripts]
mcp-audit = "mcp_audit.cli:entrypoint"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
